k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: laravel-app
spec:
  selector:
    app: laravel-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
